# NYX

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .npmrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHAT_INITIALIZATION_ANALYSIS.md  CLAUDE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  CUsersyasha.claudeplanshumming-coalescing-stream-agent-ad5a9f3504ecf39c9.md  DESIGN.md  Dockerfile  GEMINI.md  Jenkinsfile  NYX_CODEBASE_ANALYSIS.md  NYX_Codebase_For_AI_Studio.md  NYX_Deep_Architecture_Report.md  NYX_GITHUB_SETUP.md  NYX_Implementation_Roadmap.md  NYX_MODEL_TRAINING_GUIDE.md  NYX_Production_Readiness_Audit.md  NYX_vs_Claude_vs_Kimi_Gap_Analysis.md  PRODUCT.md  README.md  agent.ts.old  batch_0.json  batch_1.json  batch_2.json  batch_3.json  batch_4.json  ddg.html  ddg_out.html  diff.txt  docker-compose.yml  drizzle.config.ts  ecosystem.config.cjs  (+125 more)
.circleci/: config.yml
apps/api/: pyproject.toml
apps/api/src/: main.py
apps/api/src/agents/: opencode_crew.py  orchestrator.py  research_graph.py  temporal_worker.py
apps/api/src/config/: settings.py
src-tauri/: .tauriignore  Cargo.toml  agent_new.rs  check.json  check2.json  ddg.html  metadata.json  replace_orchestrator.py  tauri.conf.json  test.rs  test_vec.rs
src-tauri/.cargo/: config.toml
src-tauri/__manifest/_transactions/: 0-49db6725-ec24-4d0e-b15b-5579b7f28ecc.txn
src-tauri/capabilities/: default.json
src-tauri/documents.lance/_transactions/: 0-30d1dcd3-2ec1-4619-840a-d8654b1ccc1b.txn
src-tauri/icons/: icon.icns
src-tauri/src/: ai_engine.rs  bin_test_parse.rs  main.rs  research.rs  server_sidecar.rs  test_genai.rs  test_rig.rs  tray.rs
src-tauri/src/agents/: api_key_store.rs  blackboard.rs  chat.rs  cline.rs  conductor.rs  dynamic_worker.rs  engine.rs  genai_test.rs  kanban.rs  local_orchestrator.rs  memory.rs  mod.rs  opencode.rs  orchestrator.rs  planner.rs  protocol.rs  rig_test.rs  stream.rs  swarm.rs  tools.rs
src-tauri/src/commands/: agent.rs  agent_orchestrator.rs  builtin_tools.json  cache.rs  chat.rs  computer_use.rs  fix.py  fs.rs  legacy.rs  llm.rs  mcp.rs  memory.rs  mod.rs  observability.rs  proxy.rs  pty.rs  system.rs  vault.rs  voice.rs  workspace.rs
src-tauri/src/db/: commands.rs  memory.rs  mod.rs  models.rs  pool.rs  rag.rs  traces.rs
src-tauri/src/guardrails/: mod.rs
src-tauri/src/llm/: cloud_orchestrator.rs  downloader.rs  embedded.rs  gemini.rs  hf_downloader.rs  local_orchestrator.rs  manager.rs  memory.rs  mod.rs  ollama.rs  provider.rs  rig_orchestrator.rs  vram_scheduler.rs
src-tauri/src/mcp_server/: mod.rs  wasm_runner.rs
src-tauri/src/orchestrator/: commands.rs  loop_engine.rs  mod.rs  tools.rs
src-tauri/src/rag/: embeddings.rs  lancedb_store.rs  mod.rs  scanner.rs  turbovec_store.rs  vector_db.rs
src-tauri/src/workers/: mod.rs
src-tauri/test_genai/: Cargo.toml
src-tauri/test_genai/src/: main.rs
(+4252 files in other folders)
