[package]
name = "nyx"
version = "0.5.0"
description = "NYX - Native Local Intelligence & Cloud Orchestration Platform"
authors = ["NYX Dev Team"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

tokio = { version = "1", features = ["full", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "json"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
sysinfo = "0.30"
chrono = "0.4"
regex = "1"
base64 = "0.22"
keyring = "3"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = "0.24"
open = "5"
enigo = "0.3.0"
xcap = "0.9.6"
image = "0.25.6"
portable-pty = "0.8"
notify = "6.1"
window-vibrancy = "0.7.1"
tiktoken-rs = "0.11.0"
async-trait = "0.1.89"
lazy_static = "1.5"
url = "2"
fastembed = "5.17.2"
rusqlite = { version = "0.31.0", features = ["load_extension", "bundled"] }
sqlite-vec = "0.1.9"
walkdir = "2.5.0"
scraper = "0.20"
urlencoding = "2.1"
rig-core = "0.4.0"
genai = "0.1.13"
dashmap = "5"
wasmtime = "21.0.1"
lancedb = "0.30.0"
lance-index = "=7.0.0"

once_cell = "1.21.4"
arrow = "58.3.0"
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
futures = "0.3.32"
langgraph = "0.2.5"
sruim-crewai = "0.1.0"
swarm-engine = "0.1.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
