[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.137.2",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "litellm>=1.89.2",
    "mcp>=1.28.0",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.51",
    "sse-starlette>=3.4.4",
    "temporalio>=1.29.0",
    "tokenizers<=0.23.0",
    "uvicorn>=0.49.0",
]
